FullQa New/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AMCCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMC/ARP Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMCDescription__c</fullName>
        <label>AMC Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMC_Campaign__c</fullName>
        <description>Yes/No to signify if a campaign is an AMC campaign</description>
        <label>AMC Campaign?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMC_Series__c</fullName>
        <description>Used for Partner campaigns in aligning all child campaigns into Groups</description>
        <label>AMC Series #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMC_Sort_Order__c</fullName>
        <description>Used on Partner campaigns to align child campaign in order by group (AMC Series #)</description>
        <label>AMC Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualCost__c</fullName>
        <description>Field created because standard field not available on standard report types. This formula field mirrors the actual cost on the page layouts for reporting purposed only.</description>
        <formula>ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDateTBD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dictates whether or not the Event Start Date is an Actual Date or an Estimate</description>
        <inlineHelpText>Check this box if the Actual start date of the event is still unknown.  When the actual start date of the event is determined and the Event Start Date field is adjusted, make sure to uncheck this box.</inlineHelpText>
        <label>Actual Date TBD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Time_Working__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-748
https://jira.avalara.com/browse/BATS-748</description>
        <inlineHelpText>All-Time Working measures a running count of campaign members to ever reach Working, either before or after Initial Response Date, within any time frame.</inlineHelpText>
        <label>All-Time Working</label>
        <summaryFilterItems>
            <field>CampaignMember.IsWorking__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssignedAsset2__c</fullName>
        <description>Purpose: To track a second tradeshow campaign asset if applicable
Integrated: No 
Change: Level 1 
Custodian: Marketing</description>
        <label>Assigned Asset 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TC 6</fullName>
                </value>
                <value>
                    <fullName>TC 7</fullName>
                </value>
                <value>
                    <fullName>TC 8</fullName>
                </value>
                <value>
                    <fullName>TC 9</fullName>
                </value>
                <value>
                    <fullName>TC 10</fullName>
                </value>
                <value>
                    <fullName>TC 11</fullName>
                </value>
                <value>
                    <fullName>TC 12</fullName>
                </value>
                <value>
                    <fullName>TC 14</fullName>
                </value>
                <value>
                    <fullName>TC 15</fullName>
                </value>
                <value>
                    <fullName>TC 16</fullName>
                </value>
                <value>
                    <fullName>TC 17</fullName>
                </value>
                <value>
                    <fullName>TC 19</fullName>
                </value>
                <value>
                    <fullName>TC 20</fullName>
                </value>
                <value>
                    <fullName>TC 21</fullName>
                </value>
                <value>
                    <fullName>TC 22</fullName>
                </value>
                <value>
                    <fullName>TC 23 – 8 ft</fullName>
                </value>
                <value>
                    <fullName>TC 24</fullName>
                </value>
                <value>
                    <fullName>TC 25</fullName>
                </value>
                <value>
                    <fullName>TC ML</fullName>
                </value>
                <value>
                    <fullName>PU 1</fullName>
                </value>
                <value>
                    <fullName>PU 2</fullName>
                </value>
                <value>
                    <fullName>PU 3</fullName>
                </value>
                <value>
                    <fullName>PU 4</fullName>
                </value>
                <value>
                    <fullName>PU 5</fullName>
                </value>
                <value>
                    <fullName>PU 6</fullName>
                </value>
                <value>
                    <fullName>PU 7</fullName>
                </value>
                <value>
                    <fullName>PU 8</fullName>
                </value>
                <value>
                    <fullName>PU ML</fullName>
                </value>
                <value>
                    <fullName>CertCap PU 1</fullName>
                </value>
                <value>
                    <fullName>PayRoll PU 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedAsset__c</fullName>
        <description>The asset being used for the show</description>
        <inlineHelpText>The asset being used for the show</inlineHelpText>
        <label>Assigned Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tiki Booth</fullName>
                </value>
                <value>
                    <fullName>Portable Display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked if Avalara is attending/registered for this event</description>
        <inlineHelpText>This box is checked if Avalara is registered for the event</inlineHelpText>
        <label>Registered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_OppSubType__c</fullName>
        <label>CAM Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-List Event</fullName>
                </value>
                <value>
                    <fullName>A to Z Training Event</fullName>
                </value>
                <value>
                    <fullName>CAM Follow-Up Request Form</fullName>
                </value>
                <value>
                    <fullName>Product Demo Webinar</fullName>
                </value>
                <value>
                    <fullName>Promotional Email</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership Webinar</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Opp_Name__c</fullName>
        <label>CAM Lead Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTI_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BTI Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BTI_Origin__c</fullName>
        <label>BTI Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Monthly Call</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTI_Status__c</fullName>
        <label>BTI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Consideration</fullName>
                </value>
                <value>
                    <fullName>On Roadmap</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BoothNumber__c</fullName>
        <description>The Booth Number assigned to Avalara at this TradeShow</description>
        <inlineHelpText>The Booth Number assigned to Avalara at this TradeShow</inlineHelpText>
        <label>Booth Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoothSetupDate__c</fullName>
        <description>The date that setup for the event is scheduled</description>
        <inlineHelpText>The date that setup for the event is scheduled</inlineHelpText>
        <label>Booth Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BoothSize__c</fullName>
        <description>The size of the space allocated for the Avalara booth at the event</description>
        <inlineHelpText>The size of the space allocated for the Avalara booth at the event</inlineHelpText>
        <label>Booth Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoothTeardownDate__c</fullName>
        <description>The date that booth disassembly is scheduled</description>
        <inlineHelpText>The date that booth disassembly is scheduled</inlineHelpText>
        <label>Booth Teardown Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Owner__c</fullName>
        <description>Used for tradeshows, populated by marketing
Owner: Yvonne Lunceford Jira ticket IBST-1967</description>
        <label>Budget Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACP</fullName>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>AvaTax Established Partner</fullName>
                </value>
                <value>
                    <fullName>AvaTax Industry</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Cross-border</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging Launch/Partner</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>Matrix Master</fullName>
                </value>
                <value>
                    <fullName>MyLodgeTax</fullName>
                </value>
                <value>
                    <fullName>SIG Partner</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetedStartDate__c</fullName>
        <description>The estimated date that the event will begin (used for budgeting reports)</description>
        <inlineHelpText>Fill in this date if the actual start and end dates of the event are unknown</inlineHelpText>
        <label>Budgeted Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budgeted_Cost__c</fullName>
        <description>This fields was created for reporting purposes. This standard field is not available on standard report types so a workaround was required in order to add it to reports.</description>
        <formula>BudgetedCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessArea__c</fullName>
        <description>The area(s) of business that this TradeShow pertains to</description>
        <inlineHelpText>The area(s) of business that this TradeShow pertains to</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>BizDev</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>CertCapture Managed Services</fullName>
                </value>
                <value>
                    <fullName>Certs / Returns</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>JD Edwards</fullName>
                </value>
                <value>
                    <fullName>Cross-border</fullName>
                </value>
                <value>
                    <fullName>MatrixMaster</fullName>
                </value>
                <value>
                    <fullName>Mcommerce</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>MyLodge</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Open Systems</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Peachtree</fullName>
                </value>
                <value>
                    <fullName>Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>New Tradeshow Campaign field to identify business units associated with events
Integrated: No
Level 0
Marketing: Yvonee</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>MyLodgeTax</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EzTax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMManager__c</fullName>
        <formula>CAM__r.Manager.FirstName &amp; &quot; &quot; &amp; CAM__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Exclude_from_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Month View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Exclude_from_Plan_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Plan View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAMCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDMID__c</fullName>
        <formula>CDM__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CDM associated with a Campaign</description>
        <inlineHelpText>The CDM associated with a Campaign</inlineHelpText>
        <label>SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDM_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CYLeadGoals__c</fullName>
        <description>The number of leads is this event expected to generate</description>
        <inlineHelpText>The number of leads is this event expected to generate</inlineHelpText>
        <label>CY Lead Goals</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignCallNumber__c</fullName>
        <label>Campaign Call Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CampaignEndDatePlusOne__c</fullName>
        <description>End Date plus 1 day.  This is used in the query that looks for qualified Campaign Members to convert them into CAM Leads.</description>
        <formula>EndDate + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign End Date Plus One</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CampaignGroup__c</fullName>
        <label>Campaign Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Outbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Paid Digital</fullName>
                </value>
                <value>
                    <fullName>Partner Referrals</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Unpaid Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignMarketingManager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Marketing Manager.</description>
        <label>MM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MMCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Asset_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the the Primary Asset offered in a given Campaign</description>
        <inlineHelpText>A lookup to the the Primary Asset offered in a given Campaign</inlineHelpText>
        <label>Campaign Asset 1</label>
        <referenceTo>Campaign_Asset__c</referenceTo>
        <relationshipLabel>Primary Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Asset_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A link to the secondary Asset offered through a given Campaign</description>
        <inlineHelpText>A link to the secondary Asset offered through a given Campaign</inlineHelpText>
        <label>Campaign Asset 2</label>
        <referenceTo>Campaign_Asset__c</referenceTo>
        <relationshipLabel>Secondary Campaigns</relationshipLabel>
        <relationshipName>SecondaryCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Codename__c</fullName>
        <label>Campaign Codename</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4.0 SDK Help File</fullName>
                </value>
                <value>
                    <fullName>Rachet 1</fullName>
                </value>
                <value>
                    <fullName>Rachet 2</fullName>
                </value>
                <value>
                    <fullName>Turner Marketing BEST EU Calls</fullName>
                </value>
                <value>
                    <fullName>Turner Marketing GP EU Calls</fullName>
                </value>
                <value>
                    <fullName>Better/Easy Way DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_MQL_Count__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-1024
https://jira.avalara.com/browse/BATS-748</description>
        <inlineHelpText>Campaign MQL Count represents the distinct count of campaign members with an MQL Date not blank. This captures the total number of responses scored as MQL as a result of the given campaign.</inlineHelpText>
        <label>Campaign MQL Count</label>
        <summaryFilterItems>
            <field>CampaignMember.MQL_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campaign_Product_Focus__c</fullName>
        <description>Purpose: Track the primary campaign focus for loyalty campaigns
Integrated: No 
Change: Level 0 
Custodian: Marketing / Jessica Davis</description>
        <label>Campaign Product Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Consumer Use</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>CertCapture Managed Services</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
                <value>
                    <fullName>TrustFile</fullName>
                </value>
                <value>
                    <fullName>MatrixMaster</fullName>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>W-8/W-9</fullName>
                </value>
                <value>
                    <fullName>MyLodge</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Working_Count__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-748
https://jira.avalara.com/browse/ITBSE-1024</description>
        <inlineHelpText>Campaign Working Count represents the distinct count of campaign members with a Working Date not blank. This captures the total number of responses that reached Working Status as a result of the given campaign (sales qualified lead)</inlineHelpText>
        <label>Campaign Working Count</label>
        <summaryFilterItems>
            <field>CampaignMember.Working_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The city in which the event is located</description>
        <inlineHelpText>The city in which the event is located</inlineHelpText>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Through_Rate__c</fullName>
        <label>Click Through Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <description>Picklist field to be completed by marketing manager. 
Owner: Megan Mitchell Jira ticket IBST-711</description>
        <label>Collateral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Datasheets</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_Percent__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Planned&quot;),0,IF(ISPICKVAL(Status ,&quot;In Analysis&quot;),0.10,IF(ISPICKVAL(Status,&quot;In Design&quot;),0.25,IF(ISPICKVAL(Status,&quot;In Development&quot;),0.50,IF(ISPICKVAL(Status ,&quot;In QA&quot;),0.75,IF(ISPICKVAL(Status,&quot;Ready for Deployment&quot;),0.90,IF(ISPICKVAL(Status ,&quot;Deployed&quot;),1,0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConferenceCenter__c</fullName>
        <description>The arena where the event is held</description>
        <inlineHelpText>The arena where the event is held</inlineHelpText>
        <label>Conference Center</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Partner_Group__c</fullName>
        <description>The Partner Group on the Connector related to the Campaign

https://jira.avalara.com/browse/IBST-4348</description>
        <formula>TEXT( Connector__r.Routing_Partner_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Partner Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Partner_Team_Grouping__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-5465</description>
        <formula>TEXT(Connector__r.Partner_Team_Grouping__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Partner Team Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Vibrancy__c</fullName>
        <description>The Vibrancy of the Connector related to this Campaign

https://jira.avalara.com/browse/IBST-4348</description>
        <formula>TEXT( Connector__r.Vibrancy__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Vibrancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Tradeshow Campaign Fields
integrated: No
Marketing: Yvonne</description>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country the event is hosted in</description>
        <inlineHelpText>The Country the event is hosted in</inlineHelpText>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Audience__c</fullName>
        <label>Customer Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calc</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Certs</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Certs Capture</fullName>
                </value>
                <value>
                    <fullName>Matrix Master</fullName>
                </value>
                <value>
                    <fullName>TrustFile</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>ISPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>